force-app/main/default/objects/Proposal_IO_Billing_Contact__c/Proposal_IO_Billing_Contact__c.object-meta.xml
<CustomObject>
    <label>Proposal IO Billing Contact</label>
    <nameField>
        <displayFormat>BC-{000}</displayFormat>
        <label>Proposal Billing Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal IO Billing Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>