force-app/main/default/objects/Proposal_IO_Billing_Contact__c/fields/IO__c.field-meta.xml
<CustomField>
    <fullName>IO__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>IO</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>IO Billing Contacts</relationshipLabel>
    <relationshipName>Proposal_IO_Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>