force-app/main/default/objects/Proposal_IO_Billing_Contact__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Proposal Billing Contacts</relationshipLabel>
    <relationshipName>Proposal_Billing_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>