force-app/main/default/objects/Proposal_IO_Billing_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secondary Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>