force-app/main/default/objects/Proposal_IO_Billing_Contact__c/recordTypes/IO.recordType-meta.xml
<RecordType>
    <fullName>IO</fullName>
    <active>true</active>
    <label>IO</label>
</RecordType>